# INTERVIEW-AGENT

./: .gitignore  Cargo.toml  interview-plan.md  package-lock.json  package.json
backend/: .dockerignore  .env.example  Dockerfile  README.md  build_backend.bat  build_backend.sh  pyproject.toml  run.py  zt_ate_backend.spec
backend/app/: config.py  contracts.py  graph.py  main.py  orchestrator.py  phase_plan.py  state.py
backend/app/api/: routes.py
backend/app/security/: auth.py  validators.py
backend/app/services/: a2a.py  adk_router.py  agent_registry.py  agno_tools.py  crewai_orchestrator.py  evaluator.py  genai_config.py  guardrails.py  live_interface.py  memory.py  observability.py  reporting.py  secret_scanner.py  storage.py  stream_hub.py  technical_scoring.py  telemetry_overlay.py
backend/app/static/: app.js  index.html  styles.css
backend/tests/: test_candidate_session.py  test_contracts.py  test_graph.py  test_health.py  test_orchestrator.py  test_storage.py
frontend/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
frontend/app/: ClientProviders.tsx  globals.css  layout.tsx  page.tsx
frontend/components/: BackendGate.tsx  TitleBar.tsx  candidate-console.tsx  operator-console.tsx
frontend/lib/: api.ts  platform.ts  types.ts
frontend/types/: tauri-plugins.d.ts
obsidian-vault/: README.md
obsidian-vault/.obsidian/: app.json  core-plugins.json
obsidian-vault/01 - MOCs/: Interview Agent Hub.md
obsidian-vault/02 - Architecture/: Gemini Tri-Model Routing.md  JWT Auth and Security Model.md  ZT-ATE System Architecture.md  Zero-Trust Planes and Data Boundaries.md
obsidian-vault/04 - Runbooks/: Backend Startup.md  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
(+23 files in other folders)
