[package]
name = "zt-ate-sentinel-node"
version = "1.0.0"
edition = "2021"
rust-version = "1.77"

[lib]
name = "zt_ate_sentinel_node_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "zt-ate-sentinel-node"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
argon2 = "0.5"
hex = "0.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-stronghold = "2"
tauri-plugin-updater = "2"
tokio = { version = "1", features = ["rt", "sync"] }
